--- a/JOIEnergy/JOIEnergy.csproj
+++ b/JOIEnergy/JOIEnergy.csproj
@@ -6,7 +6,6 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
-    <Folder Include="Services\" />
     <Folder Include="Enums\" />
     <Folder Include="Domain\" />
     <Folder Include="Generator\" />
@@ -14,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
